[gd_scene load_steps=11 format=3 uid="uid://c6uxnwf0f4eke"]

[ext_resource type="Script" path="res://tools/dialogue/util_dialogue.gd" id="1_s5ujg"]
[ext_resource type="Texture2D" uid="uid://dx7lnux0hm0km" path="res://assets/vn/Dialogue/Dialogue Box.png" id="13_qvw8c"]
[ext_resource type="Texture2D" uid="uid://dwhnuxkb8ke1c" path="res://assets/ui/Name.png" id="14_2m0w4"]
[ext_resource type="FontFile" uid="uid://5dv6lpvm4hm6" path="res://assets/ui/ttf/Galdeano-Regular.ttf" id="15_klgac"]
[ext_resource type="FontFile" uid="uid://do4h18m68ecu8" path="res://assets/ui/ttf/Volkhov-Regular.ttf" id="16_gnm8h"]
[ext_resource type="FontFile" uid="uid://bnolguos6pb4x" path="res://assets/ui/ttf/Volkhov-Bold.ttf" id="17_r5jd7"]
[ext_resource type="FontFile" uid="uid://blo7ft3ovj4yy" path="res://assets/ui/ttf/Volkhov-Italic.ttf" id="18_6ffnf"]
[ext_resource type="FontFile" uid="uid://b5ootysr42ce3" path="res://assets/ui/ttf/Volkhov-BoldItalic.ttf" id="19_83cr4"]
[ext_resource type="Texture2D" uid="uid://bd3vg40yeb7ym" path="res://assets/ui/Next Default.png" id="20_30d0g"]

[sub_resource type="BitMap" id="BitMap_3kbno"]

[node name="Util_Dialogue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_s5ujg")

[node name="TextBox" type="Control" parent="."]
anchors_preset = 0
offset_top = 64.0
offset_bottom = 64.0
mouse_filter = 1

[node name="Box" type="TextureRect" parent="TextBox"]
modulate = Color(1, 1, 1, 0.901961)
layout_mode = 0
offset_left = 104.5
offset_top = 650.0
offset_right = 1815.5
offset_bottom = 995.0
texture = ExtResource("13_qvw8c")
expand_mode = 1

[node name="NameFrame" type="TextureRect" parent="TextBox"]
layout_mode = 0
offset_left = 384.0
offset_top = 598.0
offset_right = 875.0
offset_bottom = 697.0
texture = ExtResource("14_2m0w4")

[node name="Name" type="Label" parent="TextBox"]
layout_mode = 0
offset_left = 424.0
offset_top = 622.0
offset_right = 915.0
offset_bottom = 674.0
theme_override_colors/font_color = Color(0.898039, 0.858824, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.898039, 0.858824, 0.760784, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("15_klgac")
theme_override_font_sizes/font_size = 48
text = "Rose Violet"
autowrap_mode = 3
visible_characters_behavior = 1

[node name="Label" type="RichTextLabel" parent="TextBox"]
layout_mode = 0
offset_left = 256.0
offset_top = 732.0
offset_right = 1648.0
offset_bottom = 1031.0
theme_override_colors/default_color = Color(0.32549, 0.262745, 0.101961, 1)
theme_override_constants/line_separation = 10
theme_override_fonts/normal_font = ExtResource("16_gnm8h")
theme_override_fonts/bold_font = ExtResource("17_r5jd7")
theme_override_fonts/italics_font = ExtResource("18_6ffnf")
theme_override_fonts/bold_italics_font = ExtResource("19_83cr4")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/bold_italics_font_size = 32
bbcode_enabled = true
text = "Lorem ipsum
ultricies"
visible_characters_behavior = 1

[node name="Next" type="TextureButton" parent="TextBox"]
modulate = Color(1, 1, 1, 0.54902)
layout_mode = 0
offset_left = 1663.0
offset_top = 904.0
offset_right = 1703.0
offset_bottom = 948.0
disabled = true
texture_normal = ExtResource("20_30d0g")
texture_pressed = ExtResource("20_30d0g")
texture_hover = ExtResource("20_30d0g")
texture_disabled = ExtResource("20_30d0g")
texture_focused = ExtResource("20_30d0g")
texture_click_mask = SubResource("BitMap_3kbno")
metadata/_edit_lock_ = true

[connection signal="pressed" from="TextBox/Next" to="." method="_on_next_pressed"]
